[project]
name = "devpay"
version = "0.1.0"
description = "Subscription management infrastructure for Telegram bots"
authors = [
    {name = "fl1k3r1337"}
]
license = "MIT"
requires-python = "^3.11"
dependencies = [
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "cryptography (>=49.0.0,<50.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "greenlet (>=3.5.2,<4.0.0)",
    "redis (>=8.0.1,<9.0.0)",
    "aio-pika (>=9.6.2,<10.0.0)",
    "fastapi (>=0.138.2,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "requests (>=2.34.2,<3.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "apscheduler (>=3.11.3,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
